# packages/api/internal/api/types.gen.go
@@ -1091,11 +1091,13 @@ type GetSandboxesMetricsParams struct {
 
 // GetSandboxesSandboxIDLogsParams defines parameters for GetSandboxesSandboxIDLogs.
 type GetSandboxesSandboxIDLogsParams struct {
-	// Start Starting timestamp of the logs that should be returned in milliseconds
-	Start *int64 `form:"start,omitempty" json:"start,omitempty"`
+	// Cursor Starting timestamp of the logs that should be returned in milliseconds
+	Cursor *int64 `form:"cursor,omitempty" json:"cursor,omitempty"`
 
 	// Limit Maximum number of logs that should be returned
-	Limit *int32 `form:"limit,omitempty" json:"limit,omitempty"`
+	Limit     *int32         `form:"limit,omitempty" json:"limit,omitempty"`
+	Direction *LogsDirection `form:"direction,omitempty" json:"direction,omitempty"`
+	Level     *LogLevel      `form:"level,omitempty" json:"level,omitempty"`
 }
 
 // GetSandboxesSandboxIDMetricsParams defines parameters for GetSandboxesSandboxIDMetrics.
